Desktop/heruko 2/Farzi/force-app/main/default/objects/Account/fields/Expected_Date_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_to_Delete__c</fullName>
    <description>It show delete date of record</description>
    <label>Expected Date to Delete</label>
    <type>Date</type>
</CustomField>