Desktop/heruko 2/Farzi/force-app/main/default/objects/Account/fields/Number_of_times_Job_run__c.field-meta.xml
<CustomField>
    <fullName>Number_of_times_Job_run__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field shows Number of Time the BatchApex run on this Record</description>
    <label>Number of times Job run</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>