Desktop/heruko 2/Farzi/force-app/main/default/objects/Account/fields/Ready_to_migrate_to_Heroku__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_migrate_to_Heroku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to migrate to Heroku</label>
    <type>Checkbox</type>
</CustomField>